fix the header and sidebar collapsed issued

--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 0 24px;
     background-color: white;
-    transition: width 0.4s ease-in-out;
+    transition: width 0.5s ease-in-out;
 }
 
 .header-container.full-width {
